# cs-mastery

./: .gitignore  README.MD
.github/ISSUE_TEMPLATE/: learning_task.md
.github/workflows/: lint.yml
code/algorithms/: progress.md
code/react-sandbox/: package-lock.json  package.json
code/react-sandbox/app/: page.tsx
code/react-sandbox/app/api/revalidate/catalog/: route.ts
code/react-sandbox/app/api/revalidate/hn-front/: route.ts
code/react-sandbox/app/catalog/: page.tsx
code/react-sandbox/app/catalog/_components/: RevalidateButton.tsx
code/react-sandbox/app/counter/: page.tsx
code/react-sandbox/app/news/: loading.tsx  page.tsx
code/react-sandbox/app/news/[id]/: page.tsx
code/react-sandbox/app/news/_components/: RevalidateButton.tsx
code/react-sandbox/docs/: cache.md
courses/01-cs-fundamentals/: README.md
courses/01-cs-fundamentals/week-01/: assignment.md  notes.md  resources.md
courses/01-cs-fundamentals/week-01/examples/: basics.cpp  memory_management.cpp  pointers.cpp
courses/02-fullstack-dev/: README.md
courses/02-fullstack-dev/phase-1/week-01/: assignment.md  notes.md  resources.md
courses/02-fullstack-dev/phase-1/week-01/examples/: nextjs-components.tsx  typescript-basics.ts
courses/02-fullstack-dev/week-01/: assignment.md  notes.md  resources.md
courses/02-fullstack-dev/week-01/examples/: basic-components.tsx  generic-components.tsx  performance-optimization.tsx
courses/03-microservices/week-01/: assignment.md  notes.md  resources.md
courses/03-microservices/week-01/examples/: advanced-patterns.go  go-basics.go  worker-patterns.go
courses/04-security/: README.md
courses/04-security/week-01/: assignment.md  notes.md  resources.md
courses/04-security/week-01/examples/: data-flow-diagram.txt  stride-analysis.csv  threat-model-template.md
courses/05-devops/: README.md
courses/05-devops/week-01/: assignment.md  notes.md  resources.md
courses/05-devops/week-01/examples/: ci-pipeline.yml  gitflow-setup.sh  pull-request-template.md
courses/06-ai-integration/CIS-565-AI-In-Business/week 1/: notes.md  resources.md
courses/07-digital-homesteading/: README.md
courses/07-digital-homesteading/week-01/: assignment.md  notes.md  resources.md
courses/07-digital-homesteading/week-01/examples/: docker-compose.yml  ssh-setup.sh  system-monitor.sh
docs/: CURRICULM.md
notes/04-security/week-01/: notes.md
notes/06-ai-business/CIS-565-AI-In-Business/week 1/: notes.md
notes/06-ai-business/CIS-565-AI-In-Business/week 2/: notes.md
notes/Random/: networking-what-happens-url.md
notes/daily/: template.md
progress/: tracking.md
projects/assignments/01-cs-fundamentals/week-01-allocator/: allocator.cpp  allocator.h
projects/assignments/02-fullstack-dev/week-01-component-library/: .gitignore  tsconfig.json  vite.config.ts
projects/assignments/02-fullstack-dev/week-01-component-library/src/: App.tsx  index.ts
projects/assignments/02-fullstack-dev/week-01-component-library/src/components/: Button.tsx  DataTable.tsx
projects/assignments/02-fullstack-dev/week-01-component-library/src/hooks/: index.ts  useFetch.ts  useLocalStorage.ts
projects/assignments/02-fullstack-dev/week-01-component-library/src/styles/: globals.css
projects/mini-projects/01-cs-fundamentals/week-01-allocator/: CMakeLists.txt  README.md  main.cpp
projects/mini-projects/02-fullstack-dev/week-01-component-library/: README.md  index.html  package.json  vitest.config.ts
projects/mini-projects/02-fullstack-dev/week-01-component-library/tests/: setup.ts
projects/mini-projects/03-microservices/week-01-worker-pool/: README.md  go.mod
resources/: CURRICULM.md
(+12 files in other folders)
